--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,24 @@
 version: 2.1
 
 
-
+parameters:
+  workflow-id:
+    type: string
+    default: "${CIRCLE_WORKFLOW_ID:0:7}"
+  sh-token:
+    type: string
+    default: "b9461c43-6888-4d04-8e76-7beeddbb863c" 
 
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
       # Add parameter here  
-      workflow-id:
-        type: string
-        default: "${CIRCLE_WORKFLOW_ID:0:7}"
       when:
         type: string
       id:
         type: string
-      sh-token:
-        type: string
-        default: "b9461c43-6888-4d04-8e76-7beeddbb863c" 
+      
     steps:
       - run:
           name: Destroy environments
