--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,13 @@ commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      # Add parameter here  
+      # Add parameter here 
+      workflow-id:
+        type: string
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
+      sh-token:
+        type: string
+        default: "b9461c43-6888-4d04-8e76-7beeddbb863c" 
       
     steps:
       - run:
