--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2.1
 
 
+orbs:
+  slack: circleci/slack@4.1.1
+  aws-cli: circleci/aws-cli@1.3.0
+
 parameters:
   workflow-id:
     type: string
@@ -25,12 +29,7 @@ commands:
       - run:
           name: Destroy environments
           when: on_fail
-          command: |
-            # Your code here
-            #aws s3 rm --recursive s3://udapeople-<< parameters.id >> --recursive 
-            #aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.id >>
-            #aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.id >>
-            
+          command: |            
             aws s3 rm --recursive s3://udapeople-<< pipeline.parameters.workflow-id >>
             aws cloudformation delete-stack --stack-name udapeople-backend-<< pipeline.parameters.workflow-id >>"
             aws cloudformation delete-stack --stack-name udapeople-frontend-<< pipeline.parameters.workflow-id >>"
