--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,12 @@ commands:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
       # Add parameter here
-      when:
+      workflow-id:
         type: string
-      id:
-        type: string     
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
+      sh-token:
+        type: string
+        default: "b9461c43-6888-4d04-8e76-7beeddbb863c"     
     steps:
       - run:
           name: Revert migrations
