--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl -H "token: 2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" --request GET https://api.memstash.io/values/DB_MIGRATION_<< parameters.id >>)
+            SUCCESS=$(curl -H "token: 2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
             #SUCCESS = 1
             echo $SUCCESS
             if(( $SUCCESS==1 )); 
