--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,19 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
+  install-backend-dependencies:
+    executor: node
+    steps:
+      - checkout
+      - run:
+          name: npm install
+          working_directory: ./backend
+          command: ls -la && npm install
+      - persist_to_workspace:
+          root: .
+          paths:
+            - backend/node_modules
+  
   build-backend:
     docker:
       - image: circleci/node:13.8.0
