--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,11 +106,8 @@ jobs:
           keys: [backend-build]
       - run:
           name: Back-end build
-          command: |
-             # Your code here
-             cd backend
-             npm i
-             npm run build
+          working_directory: ./backend
+          command: npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
