--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,18 +84,6 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
-  install-backend-dependencies:
-    executor: node
-    steps:
-      - checkout
-      - run:
-          name: npm install
-          working_directory: ./backend
-          command: ls -la && npm install
-      - persist_to_workspace:
-          root: .
-          paths:
-            - backend/node_modules
   
   build-backend:
     docker:
@@ -107,7 +95,9 @@ jobs:
       - run:
           name: Back-end build
           working_directory: ./backend
-          command: npm run build
+          command: |
+            npm i
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
