--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,8 @@ jobs:
           name: Back-end build
           working_directory: ./backend
           command: |
+            ls -la && npm install
+            npm audit fix
             npm i
             npm run build
       - save_cache:
