--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,25 +65,6 @@ commands:
             fi
             
 jobs:
-  build-backend:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Back-end build
-          working_directory: ./backend
-          command: |
-            npm i
-            npm run build
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
-      - save_cache:
-          paths: [backend/dist]
-          key: backend-dist
                    
   build-frontend:
     docker:
@@ -104,7 +85,25 @@ jobs:
           key: frontend-build
 
   
-   
+  build-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Back-end build
+          command: |
+            cd backend
+            npm run build
 
   test-frontend:
     docker:
