--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix
       - run:
           name: Back-end build
           command: |
