--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,49 @@
 version: 2.1
 
 
+orbs:
+  slack: circleci/slack@4.1.1
+  aws-cli: circleci/aws-cli@1.3.0
 
+parameters:
+  workflow-id:
+    type: string
+    default: "${CIRCLE_WORKFLOW_ID:0:7}"
+  sh-token:
+    type: string
+    default: "2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" 
 
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      # Add parameter here  
-      when:
+      # Add parameter here 
+      workflow-id:
         type: string
-      id:
-        type: string
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
       sh-token:
         type: string
-        default: "b9461c43-6888-4d04-8e76-7beeddbb863c" 
+        default: "2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" 
+      
     steps:
       - run:
           name: Destroy environments
           when: on_fail
-          command: |
-            # Your code here
-            aws s3 rm --recursive s3://udapeople-<< parameters.id >> --recursive 
-            aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.id >>
-            aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.id >>
+          command: |            
+            aws s3 rm --recursive s3://udapeople-<< pipeline.parameters.workflow-id >>
+            aws cloudformation delete-stack --stack-name udapeople-backend-<< pipeline.parameters.workflow-id >>"
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<< pipeline.parameters.workflow-id >>"
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
       # Add parameter here
-      when:
+      workflow-id:
         type: string
-      id:
-        type: string     
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
+      sh-token:
+        type: string
+        default: "2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b"     
     steps:
       - run:
           name: Revert migrations
@@ -40,7 +51,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl -H "token: 2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" --request GET https://api.memstash.io/values/DB_MIGRATION_<< parameters.id >>)
+            SUCCESS=$(curl -H "token: 2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
             #SUCCESS = 1
             echo $SUCCESS
             if(( $SUCCESS==1 )); 
@@ -54,6 +65,7 @@ commands:
             fi
             
 jobs:
+                   
   build-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -64,7 +76,6 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
             cd frontend
             sudo npm install webpack-dev-server -g
             sudo npm install
@@ -73,23 +84,23 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
+  
   build-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+            npm audit --audit-level=critical --force
       - run:
           name: Back-end build
           command: |
-             # Your code here
-             cd backend
-             npm i
-             npm run build
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
+            cd backend
+            npm run build
 
   test-frontend:
     docker:
@@ -258,7 +269,7 @@ jobs:
           name: Send migration results to memstash
           command: |
             curl -H "Content-Type: text/plain" \
-              -H "token: << pipeline.parameters.memstash-token >>" \
+              -H "token: << pipeline.parameters.sh-token >>" \
               --request PUT --data "1" \
               https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}
      # Here's where you will add some code to rollback on failure  
