--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,9 @@ jobs:
           command: |
             cd backend
             npm run build
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build            
 
   test-frontend:
     docker:
