--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ jobs:
             cd backend
             npm run build
       - save_cache:
-          paths: [frontend/node_modules]
+          paths: [backend/node_modules]
           key: frontend-build            
 
   test-frontend:
