--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,6 +129,7 @@ jobs:
           name: Back-end test
           command: |
             cd backend
+            npm i
             npm run test
             
   scan-frontend:
