--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ jobs:
           command: |
             cd frontend
             npm i
-            npm audit --audit-level=critical
+            npm audit fix --audit-level=critical
 
   scan-backend:
     docker:
@@ -158,7 +158,7 @@ jobs:
           command: |
             cd backend
             npm i
-            npm audit --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
 
   deploy-infrastructure:
     docker:
