--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,8 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+          
+      - slack/status
 
   
   build-backend:
@@ -103,7 +105,8 @@ jobs:
             npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: frontend-build            
+          key: frontend-build 
+      - slack/status                     
 
   test-frontend:
     docker:
@@ -117,6 +120,7 @@ jobs:
           command: |
             cd frontend
             npm run test
+      - slack/status            
                 
   test-backend:
     docker:
@@ -131,6 +135,7 @@ jobs:
             cd backend
             npm i
             npm run test
+      - slack/status            
             
   scan-frontend:
     docker:
@@ -145,6 +150,7 @@ jobs:
             cd frontend
             npm i
             npm audit fix --audit-level=critical
+      - slack/status            
 
   scan-backend:
     docker:
@@ -159,6 +165,7 @@ jobs:
             cd backend
             npm i
             npm audit fix --audit-level=critical --force
+      - slack/status            
 
   deploy-infrastructure:
     docker:
