--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,5 @@
 version: 2.1
 
-<<<<<<< HEAD
-=======
-
-orbs:
-  slack: circleci/slack@3.4.2
-  aws-cli: circleci/aws-cli@1.3.0
-
-parameters:
-  workflow-id:
-    type: string
-    default: "${CIRCLE_WORKFLOW_ID:0:7}"
-  sh-token:
-    type: string
-    default: "2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b" 
-
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
@@ -75,14 +59,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-<<<<<<< HEAD
       - slack/status
-=======
-          
-      - slack/status
-
-  
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -95,12 +72,8 @@ jobs:
           command: |
             cd backend
             npm install
-<<<<<<< HEAD
       - restore_cache:
           keys: [backend-build]
-=======
-            
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
       - run:
           name: Back-end build
           command: |
@@ -108,13 +81,8 @@ jobs:
             npm run build
       - save_cache:
           paths: [backend/node_modules]
-<<<<<<< HEAD
           key: backend-build
       - slack/status
-=======
-          key: frontend-build 
-      - slack/status                     
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
 
   test-frontend:
     docker:
@@ -133,16 +101,11 @@ jobs:
           command: |
             cd frontend
             npm run test
-<<<<<<< HEAD
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
       - slack/status
 
-=======
-      - slack/status            
-                
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
   test-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -159,17 +122,11 @@ jobs:
           name: Run back-end Test
           command: |
             cd backend
-            npm i
             npm run test
-<<<<<<< HEAD
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
       - slack/status
-=======
-      - slack/status            
-            
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
   scan-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -181,16 +138,9 @@ jobs:
           name: Scan Frontend Dependencies
           command: |
             cd frontend
-<<<<<<< HEAD
             npm install
             npm audit fix --audit-level=critical --force
       - slack/status
-=======
-            npm i
-            npm audit fix --audit-level=critical
-      - slack/status            
-
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -202,15 +152,9 @@ jobs:
           name: scan Backend Dependencies
           command: |
             cd backend
-<<<<<<< HEAD
             npm install
             npm audit fix --audit-level=critical --force
       - slack/status
-=======
-            npm i
-            npm audit fix --audit-level=critical --force
-      - slack/status            
->>>>>>> 015bbac94aced843ab116c73b4c0250ff46e7144
 
   deploy-infrastructure:
     docker:
@@ -265,7 +209,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b"]
+          fingerprints: ["90:f5:31:18:86:26:30:4b:97:b8:57:de:9c:cd:34:95"]
       - attach_workspace:
           at: .
       - run:
@@ -378,7 +322,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: [2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b]
+          fingerprints: [90:f5:31:18:86:26:30:4b:97:b8:57:de:9c:cd:34:95]
       - attach_workspace:
           at: .
       - run:
