--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,6 +1,5 @@
 ---
-
-- name: "configuration play." 
+- name: "configuration play."
   hosts: web
   user: ubuntu
   gather_facts: false
@@ -9,12 +8,17 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
-  pre_tasks:
-    - name: "wait 600 seconds for target connection to become reachable/usable."
-      # Your code here
+    # pre_tasks:
+    #   - name: "wait 600 seconds for target connection to become reachable/usable."
+    #     wait_for_connection:
 
     - name: "install python for Ansible."
-      # Your code here
+      become: true
+      apt:
+        name: python3
+        state: latest
+        update_cache: yes
 
   roles:
-    # Your code here
+    - configure-server
+    - configure-prometheus-node-exporter
