--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b"]
+          fingerprints: ["a5:f5:a5:cc:28:ab:49:10:2a:42:bb:c2:38:90:4a:7d"]
       - attach_workspace:
           at: .
       - run:
@@ -322,7 +322,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: [2f:c4:43:e8:92:55:9e:8a:04:6a:26:b7:3f:ad:a0:0b]
+          fingerprints: [a5:f5:a5:cc:28:ab:49:10:2a:42:bb:c2:38:90:4a:7d]
       - attach_workspace:
           at: .
       - run:
@@ -397,7 +397,7 @@ jobs:
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com/#/employees"
             if ( curl -s ${URL} | grep "Welcome" )
             then
-              return 0
+              return 1
             else
               return 1
             fi
